--- a/kip_app/pubspec.yaml
+++ b/kip_app/pubspec.yaml
@@ -49,8 +49,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/image/01.png
+    - lib/assets/image/kiplogo01.png
+    - lib/assets/image/kiplogo02.png
 
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -63,17 +64,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Espera
+      fonts:
+        - asset: lib/assets/fonts/Espera-Bold.ttf
+        - asset: lib/assets/fonts/Espera-BoldItalic.ttf
+        - asset: lib/assets/fonts/Espera-Italic.ttf
+        - asset: lib/assets/fonts/Espera-Regular.ttf
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
