--- a/kip_app/pubspec.yaml
+++ b/kip_app/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  easy_rich_text: ^0.5.5
 
 
   # The following adds the Cupertino Icons font to your application.
