--- a/kip_app/pubspec.yaml
+++ b/kip_app/pubspec.yaml
@@ -52,12 +52,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/image/01.png
-    - lib/assets/image/02.png
     - lib/assets/image/02.jpg
+    - lib/assets/image
     - lib/assets/image/kiplogo01.png
     - lib/assets/image/kiplogo02.png
-    - lib/videos/01.mp4
+    - lib/videos/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
