--- a/kip_app/pubspec.yaml
+++ b/kip_app/pubspec.yaml
@@ -53,7 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/image/02.jpg
-    - lib/assets/image
+    - lib/assets/image/
     - lib/assets/image/kiplogo01.png
     - lib/assets/image/kiplogo02.png
     - lib/videos/
